crates/rulesteward-fapolicyd/tests/snapshots/fapd-W07__mixed-attrs-with-sha256hash.snap
---
source: crates/rulesteward-fapolicyd/tests/snapshot_test.rs
expression: rendered
---
parse=ok
diagnostics=1
[fapd-W07] sev=Warning line=1 col=1 span=0..111 :: deprecated attribute name `sha256hash=`; use `filehash=` instead (fapolicyd 1.4.2+)
