crates/rulesteward-fapolicyd/tests/snapshots/fapd-W07__two-sha256hash-in-one-rule.snap
---
source: crates/rulesteward-fapolicyd/tests/snapshot_test.rs
expression: rendered
---
parse=ok
diagnostics=2
[fapd-W07] sev=Warning line=1 col=1 span=0..165 :: deprecated attribute name `sha256hash=`; use `filehash=` instead (fapolicyd 1.4.2+)
[fapd-W07] sev=Warning line=1 col=1 span=0..165 :: deprecated attribute name `sha256hash=`; use `filehash=` instead (fapolicyd 1.4.2+)
